--- a/django/poisson/myapp/templates/myapp/main.html
+++ b/django/poisson/myapp/templates/myapp/main.html
@@ -5,10 +5,10 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width" />
-      <title>메인화면~</title>
+      <title>COLOR HARMONY - MAIN</title>
       <link rel="stylesheet" href="{% static 'myapp/css/components.css' %}">
       <link rel="stylesheet" href="{% static 'myapp/css/responsee.css' %}">
-      <!--이거 포함하면 틀 이상해짐
+      <!--
       <link rel="stylesheet" href="{% static 'myapp/owl-carousel/owl.carousel.css' %}">
       <link rel="stylesheet" href="{% static 'myapp/owl-carousel/owl.theme.css' %}">-->
       <!-- CUSTOM STYLE -->  
@@ -48,11 +48,8 @@
                   </ul>
                   <div class="top-nav s-12 l-5">
                      <ul class="top-ul chevron">
-                        <li><a href="../myapp/webcam.html">카메라</a>
-                        </li>
-                        <li>
-                           <a href="../myapp/undecided.html">옷</a>  
-                        </li>
+                     <li><a href="../myapp/undecided.html">코디 검색</a></li>
+                     <li><a href="../myapp/webcam.html">카메라</a></li>
                      </ul> 
                   </div>
                </div>
@@ -64,14 +61,14 @@
          <div id="carousel">
             <div id="owl-demo" class="owl-carousel owl-theme">
                <div class="item">
-                  <img src="{% static 'myapp/img/woman3.jpg' %}" alt="">      
+                  <img src="{% static 'myapp/img/woman3.jpg' %}" alt="">        
                   <div class="carousel-text">
                      <div class="line">
                         <div class="s-12 l-9">
                            <h2>Color and Fashion</h2>
                         </div>
                         <div class="s-12 l-9">
-                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit
+                           <p>Fashion recommendation service that anyone can use easily
                            </p>
                         </div>
                      </div>
@@ -110,117 +107,15 @@
          <!-- FIRST BLOCK --> 	
          <div id="first-block">
             <div class="line">
-               <h2>Some awesome blocks</h2>
-               <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-               </p>
-               <div class="margin">
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-paperplane_ico icon2x"></i>
-                     <h3>About</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-star icon2x"></i>
-                     <h3>Company</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-message icon2x"></i>
-                     <h3>Services</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-mail icon2x"></i>
-                     <h3>Contact</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
-                  </div>
-               </div>
+               <h2>2017 KMU CAPSTONE DESIGN</h2>
+               <p class="subtitile">SIGNAL - Be In Harmony</p>
+               <p class="subtitile">&nbsp;</p>
             </div>
-         </div>
-         <!-- SECOND BLOCK --> 	
-         <div id="second-block">
-            <div class="line">
-               <div class="margin-bottom">
-                  <div class="margin">
-                     <article class="s-12 l-8 center">
-                        <h1>Amazing title</h1>
-                        <p class="margin-bottom">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                        </p>
-                        <a class="button s-12 l-4 center" href="product.html">Read more</a>  			
-                     </article>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <!-- GALLERY --> 	
-         <div id="third-block">
-            <div class="line">
-               <h2>Responsive gallery</h2>
-               <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-               </p>
-               <div class="margin">
-                  <div class="s-12 m-6 l-3">
-                     <img src="{% static 'myapp/img/first-small.jpg' %}" alt="alternative text">      
-                     <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3">
-                     <img src="{% static 'myapp/img/second-small.jpg' %}" alt="alternative text">      
-                     <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3">
-                     <img src="{% static 'myapp/img/third-small.jpg' %}" alt="alternative text">      
-                     <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                     </p>
-                  </div>
-                  <div class="s-12 m-6 l-3">
-                     <img src="{% static 'myapp/img/fourth-small.jpg' %}" alt="alternative text">      
-                     <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div id="fourth-block">
-            <div class="line">
-               <div id="owl-demo2" class="owl-carousel owl-theme">
-                  <div class="item">
-                     <h2>Amazing responsive template</h2>
-                     <p class="s-12 m-12 l-8 center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                     </p>
-                  </div>
-                  <div class="item">
-                     <h2>Responsive components</h2>
-                     <p class="s-12 m-12 l-8 center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                     </p>
-                  </div>
-                  <div class="item">
-                     <h2>Retina ready</h2>
-                     <p class="s-12 m-12 l-8 center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit  lobortis nisl ut aliquip ex ea commodo consequat.
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </div>
+         </div>         
+         <div id="fourth-block"></div>
       </section>
       <!-- FOOTER -->   
-      <footer>
-         <div class="line">
-            <div class="s-12 l-6">
-               <p>Copyright 2015, Vision Design - graphic zoo
-               </p>
-            </div>
-            <div class="s-12 l-6">
-               <p class="right">
-                  <a class="right" href="http://www.myresponsee.com" title="Responsee - lightweight responsive framework">Design and coding by Responsee Team</a>
-               </p>
-            </div>
-         </div>
+      <footer>        
       </footer>
       <script type="text/javascript" src="{% static 'myapp/"owl-carousel/owl.carousel.js' %}"></script>
       <script type="text/javascript">
